--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,6 +14,7 @@
     }
   ],
   "start_url": "/?utm_source=a2hs",
+  "display": "standalone",
   "background_color": "#FFFFFF",
   "display": "standalone",
   "scope": "/",
