--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dependencies": {
         "google-fonts-webpack-plugin": "^0.4.4",
         "sw-precache-webpack-plugin": "^0.11.5",
+        "vue-confetti": "^0.4.2",
+        "vue-progressbar": "^0.7.5",
         "vue-router": "^3.0.2",
         "vue-shortkey": "^3.1.6",
         "vuex": "^3.1.0"
