--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "dependencies": {
         "google-fonts-webpack-plugin": "^0.4.4",
         "sw-precache-webpack-plugin": "^0.11.5",
+        "vee-validate": "^2.1.7",
         "vue-confetti": "^0.4.2",
         "vue-progressbar": "^0.7.5",
         "vue-router": "^3.0.2",
         "vue-shortkey": "^3.1.6",
+        "vuejs-noty": "^0.1.3",
         "vuex": "^3.1.0"
     }
 }
